--- a/deploy/mysql/mysql-local.yaml
+++ b/deploy/mysql/mysql-local.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ReplicationController
 metadata:
   name: mysql
+  namespace: ingress-nginx
   labels:
     name: mysql
 spec:
@@ -39,11 +40,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql
+  namespace: ingress-nginx
   labels:
     name: mysql
 spec:
   ports:
   - port: 3306
     targetPort: 3306
+    nodePort: 30006
   selector:
     name: mysql
+  type: NodePort
