--- a/deploy/nacos/nacos-no-pvc-ingress.yaml
+++ b/deploy/nacos/nacos-no-pvc-ingress.yaml
@@ -4,6 +4,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nacos-headless
+  namespace: ingress-nginx
   labels:
     app: nacos-headless
 spec:
@@ -30,6 +31,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nacos-cm
+  namespace: ingress-nginx
 data:
   mysql.host: "mysql"
   mysql.db.name: "nacos_devtest"
@@ -41,9 +43,10 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: nacos
+  namespace: ingress-nginx
 spec:
   serviceName: nacos-headless
-  replicas: 3
+  replicas: 1
   template:
     metadata:
       labels:
@@ -63,8 +66,8 @@ spec:
               topologyKey: "kubernetes.io/hostname"
       containers:
         - name: nacos
-          imagePullPolicy: Always
-          image: nacos/nacos-server:latest
+          imagePullPolicy: IfNotPresent
+          image: nacos/nacos-server:2.2.3
           resources:
             requests:
               memory: "2Gi"
@@ -115,7 +118,23 @@ spec:
             - name: PREFER_HOST_MODE
               value: "hostname"
             - name: NACOS_SERVERS
-              value: "nacos-0.nacos-headless.default.svc.cluster.local:8848 nacos-1.nacos-headless.default.svc.cluster.local:8848 nacos-2.nacos-headless.default.svc.cluster.local:8848"
+              value: "nacos-0.nacos-headless.default.svc.cluster.local:8848"
+            - name: MYSQL_SERVICE_DB_PARAM
+              value: "characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true"
+            - name: NACOS_AUTH_IDENTITY_KEY
+              value: "2222"
+            - name: NACOS_AUTH_IDENTITY_VALUE
+              value: "2xxx"
+            - name: NACOS_AUTH_TOKEN
+              value: "SecretKey012345678901234567890123456789012345678901234567890123456789"
+            - name: NACOS_AUTH_CACHE_ENABLE
+              value: "true"
+            - name: NACOS_CORE_AUTH_ENABLED
+              value: "true"
+            - name: NACOS_AUTH_IDENTITY_KEY
+              value: "authKey"
+            - name: NACOS_AUTH_IDENTITY_VALUE
+              value: "nacosSecurity"
   selector:
     matchLabels:
       app: nacos
@@ -129,9 +148,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: nacos-headless
+  namespace: ingress-nginx
 spec:
+  ingressClassName: nginx
   rules:
-  - host: nacos-web.nacos-demo.com
+  - host: nacos-demo.com
     http:
       paths:
       - path: /nacos
@@ -140,4 +161,4 @@ spec:
           service: 
             name: nacos-headless
             port:
-              name: server
+              number: 8848
