--- a/deploy/nacos/nacos-quick-start.yaml
+++ b/deploy/nacos/nacos-quick-start.yaml
@@ -62,7 +62,7 @@ spec:
               topologyKey: "kubernetes.io/hostname"
       containers:
         - name: nacos
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           image: nacos/nacos-server:2.2.3
           resources:
             requests:
@@ -115,6 +115,22 @@ spec:
               value: "hostname"
             - name: NACOS_SERVERS
               value: "nacos-0.nacos-headless.default.svc.cluster.local:8848 nacos-1.nacos-headless.default.svc.cluster.local:8848 nacos-2.nacos-headless.default.svc.cluster.local:8848"
+            - name: MYSQL_SERVICE_DB_PARAM
+              value: "characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true"
+            - name: NACOS_AUTH_IDENTITY_KEY
+              value: "2222"
+            - name: NACOS_AUTH_IDENTITY_VALUE
+              value: "2xxx"
+            - name: NACOS_AUTH_TOKEN
+              value: "SecretKey012345678901234567890123456789012345678901234567890123456789"
+            - name: NACOS_AUTH_CACHE_ENABLE
+              value: "true"
+            - name: NACOS_CORE_AUTH_ENABLED
+              value: "true"
+            - name: NACOS_AUTH_IDENTITY_KEY
+              value: "authKey"
+            - name: NACOS_AUTH_IDENTITY_VALUE
+              value: "nacosSecurity"
   selector:
     matchLabels:
       app: nacos
